# lan-mine

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup-env.sh  start.sh  stop.sh
desktop-app/: DISTRIBUTION-README.txt  HOW-TO-DISTRIBUTE.txt  README.md  build.sh  lan-mine.spec  launch-linux.sh  launch-macos.command  main.py  package.sh  requirements.txt
static/: script.js  style.css
templates/: index.html
